Closed Bug 487215 Opened 17 years ago Closed 17 years ago

Crash [@ js_Interpret ]

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9.2a1

People

(Reporter: dev-null, Assigned: mrbkap)

References

()

Details

(Keywords: crash, regression, verified1.9.1)

Crash Data

Attachments

(1 file)

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090407 Minefield/3.6a1pre Steps to reproduce: 1. Open the URL. Actual result: Crashes. BuildID=20090406035346 SourceStamp=b14428284d51 works fine BuildID=20090407030745 SourceStamp=f0507c4d0abb fails Crash Report: http://crash-stats.mozilla.com/report/index/84fe518c-c2c1-4a6b-9168-18c422090407
Flags: blocking1.9.1?
I guess it's triggered by (function () { Math.min(10, items.length-index).times(proceed); if (index < items.length) setTimeout(arguments.callee, 50); })(); in http://res.nicovideo.jp/js/ads.js
Assignee: general → brendan
Status: NEW → ASSIGNED
OS: Mac OS X → All
Priority: -- → P1
Hardware: x86 → All
Target Milestone: --- → mozilla1.9.1b4
Flags: blocking1.9.1? → blocking1.9.1+
Blocks: 487294
Attached patch Proposed fixSplinter Review
We can't unset the funarg flag if the lambda uses arguments.
Assignee: brendan → mrbkap
Attachment #371543 - Flags: review?(brendan)
Comment on attachment 371543 [details] [diff] [review] Proposed fix Argh, my todo list had these two items, forgotten till now: * arguments.callee hazard not flagged via PND_FUNARG * named function expr name not flagged via PND_FUNARG The second is still an issue, but one fix at a time. /be
Attachment #371543 - Flags: review?(brendan) → review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Verified fixed with the given URL from comment 0 on trunk and 1.9.1 with the following debug builds: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090422 Minefield/3.6a1pre ID:20090422224452 Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b4pre) Gecko/20090422 Shiretoko/3.5b4pre ID:20090422122043
Status: RESOLVED → VERIFIED
Target Milestone: mozilla1.9.1b4 → mozilla1.9.2a1
Crash Signature: [@ js_Interpret ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: