Bug 487215 - A lambda expression that uses arguments might escape, so don't clear the funarg flag. r=brendan